Добавлен сбор и вывод статистики
